# butcher

./: .gitignore  CMakeLists.txt  README.md  global.h  main.c  main.cpp
src/: butcher.c  butcher.cpp  butcher.h  butcher.hpp  code.cpp  code.hpp
src/arch/: arch_elf.cpp  arch_elf.hpp  arch_pe.cpp  arch_pe.hpp  archive.cpp  archive.hpp  elf_x64.cpp  elf_x64.hpp  pe_x64.c  pe_x64.cpp  pe_x64.h  pe_x64.hpp
src/base/: base_x64.cpp  base_x64.hpp
src/butcher/: butcher.c  butcher.h
src/emu/: Makefile  butcher_x64.c  butcher_x64.h  butcher_x64.py  pyreg.sh  x64.c  x64.h
src/files/: common.cpp  common.hpp  elf.cpp  elf.hpp  pe.c  pe.cpp  pe.h  pe.hpp
src/lang/: Makefile  emit.cpp  emit.hpp  grammar.y  lang_c.cpp  lang_c.hpp  lang_c_x64.cpp  lang_c_x64.hpp  lang_py.cpp  lang_py.hpp  lang_py_x64.cpp  lang_py_x64.hpp  lang_x64.cpp  lang_x64.hpp  language.cpp  language.hpp  lexer.l  parser.cpp  parser.hpp  scanner.cpp  scanner.hpp  test.cpp
src/mcp/: mcp_server.hpp
src/pe/: pe.c  pe.h
src/sed/c/: Delphi__FreeMem.sed  Delphi__GetMem.sed  Delphi__ReallocMem.sed  user32_dll_CharUpperBuffW.sed
src/sed/c/32/: Delphi__FreeMem.sed  Delphi__GetMem.sed  Delphi__ReallocMem.sed  kernel32_dll_GetACP.sed  kernel32_dll_GetCPInfo.sed  kernel32_dll_GetLocalTime.sed  kernel32_dll_IsDebuggerPresent.sed  kernel32_dll_MultiByteToWideChar.sed  kernel32_dll_QueryPerformanceCounter.sed  user32_dll_CharLowerBuffW.sed  (+2 more)
src/test/: CMakeLists.txt  Makefile  files.sh  files2.sh
src/test/c/: files.sh  files2.sh  files3.2.sh  files3.sh  files4.sh  files5.2.sh  files5.sh  test.c.rej
src/test/mcp/: test.sh
src/test/py/: files.sh  files2.sh  files3.sh  files4.sh
src/tools/: auto.sh  idrmap_to_butcher.py
tutorial/: libffi-6.map  libffi-6.txt
(+13 files in other folders)
